更新資料庫模型、新增描述

--- a/Backstage/LastShopping/LastShopping/Views/Shared/_Layout.cshtml
+++ b/Backstage/LastShopping/LastShopping/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ManagerRole" asp-action="Index">管理員身分資料表</a>
+                        </li>
                     </ul>
                 </div>
             </div>
