更新網頁排版

--- a/Backstage/LastShopping/LastShopping/Views/ManagerRole/Index.cshtml
+++ b/Backstage/LastShopping/LastShopping/Views/ManagerRole/Index.cshtml
@@ -4,59 +4,86 @@
     ViewData["Title"] = "ManagerRole Index";
 }
 <link rel="stylesheet" href="~/lib/datatable/css/datatables.min.css"/>
+<link rel="stylesheet" href="~/lib/sweetalert2/dist/sweetalert2.min.css" />
 
 <script src="~/lib/datatable/js/datatables.min.js"></script>
+<script src="~/lib/sweetalert2/dist/sweetalert2.min.js"></script>
+<script src="~/js/DataTableHelper.js" asp-append-version="true"></script>
+<script src="~/js/UiHelper.js" asp-append-version="true"></script>
+<script src="~/js/AjaxHelper.js" asp-append-version="true"></script>
 
 <h1>管理者身分資料列表</h1>
 
 <p>
     <a asp-action="Create">新增</a>
 </p>
-<table id="testTable" class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ModifyDate)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ModifyDate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
-<script src="~/js/ManagerRole/Index.js" asp-append-version="true"></script>
+<form asp-action="Create">
+    <table id="table" class="thead">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CreateDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ModifyDate)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody align="center">
+        @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreateDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ModifyDate)
+                </td>
+                <td>
+                        <i class="fa-solid fa-pencil" onclick="UiHelper.confirm('請問是否刪除 @item.Name 資料', )"></i>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="fa-solid fa-trash-can"></i></a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</form>
 <script nonce="febe20d4-fd87-447c-a128-29735e009af6" crossorigin="anonymous">
     DataTableHelper.getDataTable({
-        tableName: "testTable",
-        targets: "nosort"
+        tableName: "table",
+        targets: [4]
     });
+    funtion test (){
+        AjaxHelper.method({
+            type: "Delete",
+            url: "@Url.Action("Delete", "ManagerRoleAPI")",
+            data: {
+                id: 
+            },
+            success: (result) => {
+                // 判斷 是否有資料
+                if (!result) {
+                    UiHelper.showErr("服務呼叫異常"); // 提示視窗
+                    return;0
+                }
+                this.dataAll = result;
+                this.dataAll.forEach((item, i) => {
+                    this.dataAll[i].EditUrl = `/Equation_energy/Edit?id=${item.id}`;
+                    this.dataAll[i].DeleteUrl = `/Equation_energy/Delete?id=${item.id}`;
+                });
+            }
+        })
+        })
+    }
 </script>
