--- a/Backstage/LastShopping/LastShopping/Views/Shared/_Layout.cshtml
+++ b/Backstage/LastShopping/LastShopping/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="ts-menu is-dense is-small">
                 <a asp-area="" asp-controller="Home" asp-action="Privacy" class="item">Privacy</a>
-                <a href="#1" class="item">test2</a>
+                <a asp-area="" asp-controller="ManagerRole" asp-action="Index" class="item">ManagerRole</a>
                 <a href="#1" class="item">test3</a>
             </div>
         </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="cell is-fluid is-secondary">
             <div class="ts-space is-large">
-                <main role="main" class="ts-container is-narrow">
+                <main role="main">
                     @RenderBody()
                 </main>
             </div>
